# nemo-wipe

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  meson.build
debian/: changelog  control  copyright  rules
help/: Makefile.am  meson.build
help/C/: index.docbook  nautilus-srm.txt  nautilus-srm.xml  nautilus-wipe.xml
help/fr/: fr.po
m4/: na-nautilus-extdir.m4  nw-nautilus-extdir.m4
nautilus-srm/: Makefile.am  compat.h  delete-operation.c  delete-operation.h  fill-operation.c  fill-operation.h  nautilus-srm.c  nautilus-srm.h  operation-manager.c  operation-manager.h  progress-dialog.c  progress-dialog.h  test.c
nautilus-wipe/: Makefile.am  compat.h  delete-operation.c  delete-operation.h  extension.c  fill-operation.c  fill-operation.h  nautilus-wipe.c  nautilus-wipe.h  nw-api-impl.h  nw-api-impl.i  nw-compat.h  nw-delete-operation.c  nw-delete-operation.h  nw-extension.c  nw-extension.h  nw-fill-operation.c  nw-fill-operation.h  nw-operation-manager.c  nw-operation-manager.h  nw-operation.c  nw-operation.h  nw-path-list.c  nw-path-list.h  nw-progress-dialog.c  nw-progress-dialog.h  nw-type-utils.h  operation-manager.c  operation-manager.h  path-list.c  path-list.h  progress-dialog.c  progress-dialog.h  test.c  type-utils.h
nemo-wipe/: Makefile.am  extension.c  nw-api-impl.h  nw-api-impl.h.gch  nw-compat.h  nw-delete-operation.c  nw-delete-operation.h  nw-extension.c  nw-fill-operation.c  nw-operation-manager.c  nw-path-list.c  nw-progress-dialog.c  nw-progress-dialog.h
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  Makevars.in  POTFILES.in  da.po  de.po  fr.po  meson.build  ru.po
src/: extension.c  meson.build  nw-api-impl.h  nw-compat.h  nw-delete-operation.c  nw-extension.c  nw-fill-operation.c  nw-fill-operation.h  nw-operation-manager.c  nw-operation-manager.h  nw-operation.c  nw-operation.h  nw-path-list.c  nw-path-list.h  nw-progress-dialog.c
